# Custom-cpp-Game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  information.txt  main.cpp  test.cpp
assets/shaders/: MainShader.fs  MainShader.vs  basic_shader.vs
editor/: CMakelists.txt  ContentBrowser.cpp  ContentBrowser.h  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
editor/asset/shaders/: Texture.glsl  simple3d.glsl
editor3d/: CMakelists.txt  EditorApp3d.cpp  EditorLayer3d.cpp  EditorLayer3d.h
examples/: CMakelists.txt
examples/SpecialParition/: BV.cpp  BV.h  CMakelists.txt  RenderLayer.cpp  RenderLayer.h  SPApplication.cpp  shape.h
run/: AssimpLog_C.txt  imgui.ini
run/asset/models/: tank.rar
run/asset/scenes/: ManyBox.yml  boxtest.yml  n  new.yml  new2.yml  physicTest.yml  shadowTest.yml
run/asset/shaders/: debug.glsl  depthMap.glsl  line.glsl  sa.glsl  simple3d.glsl  skybox.glsl
sandbox/: CMakelists.txt  demo3d.cpp  demo3d.h  imgui.ini  sandbox.cpp
sandbox/asset/shaders/: Texture.glsl  example.glsl  simple3d.glsl
src/: CMakeLists.txt  Engine.h  Keycode.h  OrthographicCameraController.cpp  OrthographicCameraController.h  WindowsInput.cpp  WindowsInput.h  input.h
src/ImGui/: ImGuiBuild.cpp
src/MainRenderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Orthograhpic2DCamera.cpp  Orthographic2DCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  glm_h.code-search
src/Maths/: Math.cpp  Math.h
src/OpenGl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCubeMapTexture.cpp  OpenGLCubeMapTexture.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Environment.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Material.h  Mesh.cpp  Mesh.h  Orthograhpic2DCamera.cpp  Orthographic2DCamera.h  Perspective3DCamera.cpp  Perspective3DCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  Vertex3D.h  VertexArray.cpp  VertexArray.h
src/Window/: Window.cpp  Window.h
src/application/: Application.cpp  Application.h
src/camera/: Camera.h
src/core/: Application.cpp  Application.h  Editor3DCameraController.cpp  Editor3DCameraController.h  EntryPoint.cpp  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Timestep.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h  core.h  imguiLayer.cpp  imguiLayer.h  input.h  pch.h
src/core/Log/: Log.cpp  Log.h
src/event/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventListener.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
src/event/types/key/: KeyEvent.cpp  KeyEvent.h
src/event/types/mouse/: MouseEvent.cpp  MouseEvent.h
src/event/types/window/: WindowEvent.cpp  WindowEvent.h
src/glm/: glm.h
src/input/: InputHandler.cpp  InputHandler.h
src/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  imguiLayer.cpp  imguiLayer.h
src/map/: Map.cpp  Map.h  MapModel.cpp  MapModel.h  Triangle.h
src/mesh/: Mesh.cpp  Mesh.h
src/model/: Model.cpp  Model.h
src/others/: Transform.h
src/physic/: Collider.cpp  Collider.h  ColliderBV.cpp  ColliderBV.h  CollisionManager.cpp  CollisionManager.h  CollisionTest.cpp  CollisionTest.h  PhysicUtils.cpp  PhysicUtils.h  PhysicWorld.cpp  PhysicWorld.h  RigidBody.cpp  RigidBody.h  Solver.cpp  Solver.h  bv.cpp  bv.h  bvh.h
src/player/: Rectangle.h  Ship.cpp  Ship.h
src/renderer/: MasterRenderer.cpp  MasterRenderer.h  Renderer.cpp  Renderer.h
src/scene/: Components.cpp  Components.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  Frustum.h  Light.h  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
src/shader/: Shader.cpp  Shader.h
src/test/: test.cpp
src/texture/: Texture.cpp  Texture.h
src/utils/: PlatformUtils.cpp  PlatformUtils.h
test/: CMakeLists.txt  test.cpp
